Delete Policies by datasetId